argus-pep-api-c 2.0.3
---------------------
* configure: added option --with-libcurl-nss for RHEL6/SL6.
* bug fix: for libcurl-nss, don't set the default SSL cipher list.

argus-pep-api-c 2.0.2
---------------------
* bug fix: disable the SSL cipher ECDH as workaround for the EC SSL 
           handshake problem with OpenSSL 1.0 (actually this should be fixed on the server, 
           not on the client).

argus-pep-api-c 2.0.1
---------------------
* bug fix: the HTTP header "Expect: 100-continue" is not used for the POST.
* bug fix: curl option CURLOPT_NOSIGNAL is enabled by default.
* bug fix: fflush every log messages.

argus-pep-api-c 2.0.0
---------------------
* refactoring: include dir renamed to argus (e.g. /usr/include/argus)
* refactoring: new thread safe implementation.
* refactoring: using a PEP handle for function call.
* refactoring: library renamed libargus-pep.so
* pkg-config libargus-pep.pc file added for autotools.

--------------------------------------------------------------

PEP-C 1.3.1
-----------
* copyright updated in sources.
* refactoring: pure pedantic ANSI C implementation.
* source code review recommendations implemented.

PEP-C 1.3.0
-----------
* pep/xacml.h: deprecated functions: xacml_attributeassignment_values_length(attr), xacml_attributeassignment_addvalue(attr,value)
               AttributeAssignment can only have one value, use xacml_attributeassignment_getvalue(attr) and xacml_attributeassignment_setvalue(attr,value) instead.
* pep/xacml.h: functions xacml_attributeassignment_setdatatype(attr,datatype) and xacml_attributeassignment_getdatatype(attr) added.
* refactoring: new header pep/profiles.h added for XACML profiles identifiers and functions.
* pep/profiles.h: Authorization Interoperability Profile (v1.1) and Grid Worker Node Authorization (v1.0) constants implemented.
* pep/profiles.h: AuthZ Interop Profile -> Grid WN AuthZ Profile PIP adapter implemented. 