@@ -30,29 +30,34 @@ AM_DISABLE_STATIC
 #
 # check for options
 #
+AC_MSG_CHECKING([whether to package header files and doc])
 AC_ARG_ENABLE([devel],
     [AS_HELP_STRING([--disable-devel],
         [create a package without the header files and doc])],
     [enable_devel=no],
     [enable_devel=yes])
 AM_CONDITIONAL([ENABLE_DEVEL], [test "x$enable_devel" == xyes])
+AC_MSG_RESULT([$enable_devel])
 
+AC_MSG_CHECKING([whether to package the shared library])
 AC_ARG_ENABLE([library],
     [AS_HELP_STRING([--disable-library],
         [create a package without the shared library])],
     [enable_library=no],
     [enable_library=yes])
 AM_CONDITIONAL([ENABLE_LIBRARY], [test "x$enable_library" == xyes])
+AC_MSG_RESULT([$enable_library])
 
 # RHEL6/SL6 use libcurl with NSS, not OpenSSL!!!
+AC_MSG_CHECKING([whether libcurl uses NSS])
 AC_ARG_WITH([libcurl-nss],
-   [AS_HELP_STRING([--with-libcurl-nss],
-      [assume libcurl is compiled with NSS [default=libcurl-openssl]])],
+   [AS_HELP_STRING([--with-libcurl-nss],[assume libcurl is compiled with NSS [default=libcurl-openssl]])],
    [],
    [with_libcurl_nss=no])
 
 AS_IF([test "x$with_libcurl_nss" != xno],
    [AC_DEFINE([HAVE_LIBCURL_NSS],[1],[Define to 1 if libcurl is compiled with NSS, not OpenSSL])])
+AC_MSG_RESULT([$with_libcurl_nss])
 
 
 
